<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitnessApp</string>
    <!-- ################################################################## Temp-->
    <string name="cat_prompt">Choose a Categorie</string>

    <!-- ################################################################## CreatExcersisActivity -->
    <string name="dialog_alrdyinCat">This exersices is already in this categorie, you want continue?</string>
    <string name="dialog_continuewithcreation">You didn\'t fill in all fields. Do you wanna continue with creation?</string>

    <!-- ################################################################## ExercisesCatActivity -->
    <string name="dialog_allEx">All Exercises</string>
    <string name="dialog_selectCatforDel">Select a catagorie which you want to delete</string>
    <string name="dialog_selectedbodypart">Your Selected Bodypart is</string>
    <string name="dialog_deletefistfordelete"> There are Excersises from this bodypart pls delete them first!</string>
    <string name="dialog_insertbp">Insert the Bodypart you want to add</string>
    <string name="dialog_bodyexist">This Bodypart exists already!</string>

    <!-- ################################################################## MakeAdmin -->
    <string name="dialog_userdelete">Which user should be delete?</string>
    <string name="dialog_userupdate">Which user should be updated?</string>
    <string name="dialog_useryesadmin">Which user should be admin?</string>
    <string name="dialog_usernoadmin">Which user should not be admin?</string>
    <string name="dialog_selecteduser">Your Selected User is</string>

    <!-- ################################################################## PlansActivity -->
    <string name="dialog_plantodelete">Select a plan to delete</string>
    <string name="dialog_selectedPlan">Your Selected Plan is</string>

    <!-- ################################################################## showActivity -->
    <string name="dialog_plantoadd">Select a plan to add</string>
    <string name="dialog_deletedEx">You just deleted this Exercise</string>

    <!-- ################################################################## Main-->
    <!--Buttons -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_MakeAdmin">Transport to Admin</string>
    <string name="button_Users">Users</string>
    <string name="button_RemoveAdmin">Remove from Admin</string>

    <string name="dialog_checknameandpw">Username or password are wrong. Please try again</string>

    <!-- ################################################################## register-->
    <!-- inputs-->
    <string name="input_fname">Firstname :</string>
    <string name="input_lname">Lastname :</string>
    <string name="input_username">Username :</string>
    <string name="input_password">Password :</string>
    <string name="action_settings">Settings</string>
    <string name="input_passwordR">Password Repeat :</string>

    <!-- hints-->
    <string name="hint_fname">Firstname...</string>
    <string name="hint_lname">Lastname...</string>
    <string name="hint_username">Username...</string>


    <string name="dialog_usersexist">This Person already exists. Please fill in other information</string>
    <string name="dialog_continuewithregistration">You didn\'t fill in all fields. Do you wanna continue with registration?</string>
    <string name="dialog_pwdidntmatch">Your Password didn\'t match. Try again?</string>

    <!-- ################################################################## Main Menu-->
    <!--Buttons -->
    <string name="button_exercises">Exercises</string>
    <string name="button_plan">My Plans</string>
    <string name="button_newE">Add a new Excersis</string>
    <string name="button_group">My Groups</string>

    <!-- ################################################################## Create Exercises-->
    <string name="input_exname">Name :</string>
    <string name="input_excat">Categorie :</string>
    <string name="input_exdescription">Description :</string>
    <string name="input_catname">Category Name :</string>
    <!-- hints-->
    <string name="hint_exname">Name..</string>
    <string name="hint_exdescription">Write here your description...</string>
    <string name="hint_catname">Name..</string>
    <!--Buttons -->
    <string name="button_create">Create</string>

    <!-- ################################################################## Bottom-->
    <!--Buttons -->
    <string name="button_bAllEx">Exercises</string>
    <string name="button_bPlan">My Plan</string>
    <string name="button_addcategory">add Category</string>
    <string name="button_delcategory">delete Category</string>
    <string name="updateRegister">Update</string>
    <string name="updatecreate">Update</string>

    <!-- ################################################################## My Group-->
    <!-- titel-->
    <string name="titel_groups">My Groups</string>
    <string name="mygroups_join">Join a new Group</string>
    <string name="mygroups_all">All my Friends</string>
    <string name="dialog_rdyinGroup">You are already in this Group</string>

    <!-- ################################################################## Menu Exercises-->
    <!-- titel-->
    <string name="menu_add">Add to my Plan</string>
    <string name="menu_addexercisefromcat">Add a Exercise to Categorie</string>
    <string name="menu_deletP">Delete from my Plan</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_change">Change</string>
    <string name="menu_creatEx">Create exercise</string>
    <string name="menu_removeExplan">Remove from MyPlan</string>
    <string name="menu_addExtoPlan">Add new exercise to MyPlan</string>
    <string name="menu_delcat">Delete categorie</string>
    <string name="menu_addcat">Add categorie</string>

    <!-- ################################################################## dialogs-->
    <!-- titel-->
    <string name="dialog_t_leaveGrp">Leave Group</string>
    <string name="dialog_q_leaveGrp">Are you sure you want to leave the group?</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_t_exit">Exit</string>
    <string name="dialog_q_exit">Are you sure you want to exit the FitnessApp?</string>
    <string name="dialog_t_join">Join Group</string>
    <string name="dialog_q_join">Insert the name of the Group</string>
    <string name="dialog_p_insert">Insert the name of the Plan</string>
    <string name="dialog_t_delete">Delete Exercise</string>
    <string name="dialog_q_delete">Are you sure you want to delete this Exercise?</string>
    <string name="title_activity_add_del_category">addDelCategory</string>

    <!--menu -->
    <string name="menu_addNormal">Add to plan</string>
    <string name="menu_deleteNormal">Delete from plan</string>
    <string name="menu_addPlam">Add a Plan</string>
    <string name="menu_deletePlan">Delete a Plan</string>
    <string name="title_activity_setings">SetingsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_setting_fragment">SettingFragment</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>
    <string name="pref_select_size">Select your Size</string>
    <string name="pref_summary">Define your font size</string>
    <string name="pref_select_color">Select your font color</string>
    <string name="pref_summarycolor">Chose your font color</string>
    <string name="pref_summaryinfos">Get Infos about the Application</string>
    <string name="pref_select_infos">Infos</string>
    <string name="pref_summarydescription">Its an application about fitness. Here you can
        build up your own plans to be more effizient at the gym. You can see all different workouts and test them. You can even join groups and see what
        for exercises they do or have in their plans. With this Apllication you will improve your strenght and abilities a lot. Thx for being here.</string>
    <string name="pref_summaryinfosall">This app has been made by Joey Zuber and Matthias Zuber. ©Copyright  Version 1.0 , 2017 (Release 04.05.2017).</string>
    <string name="titelWelcome">Welcome</string>

</resources>