<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/pref_lang_entries"
        android:entryValues="@array/pref_lang_values"
        android:key="pref_lang"
        android:summary="@string/pref_summary"
        android:title="@string/pref_select_size" />

    <ListPreference
        android:entries="@array/pref_color_entries"
        android:entryValues="@array/pref_color_values"
        android:key="pref_color"
        android:summary="@string/pref_summarycolor"
        android:title="@string/pref_select_color" />


    <Preference
        android:key="pref_description"
        android:selectable="false"
        android:title="Description"
        android:summary="@string/pref_summarydescription"/>


    <Preference
        android:key="pref_infos"
        android:selectable="false"
        android:title="Infos"
        android:summary="@string/pref_summaryinfosall"/>
        android:summary="This app has been made by Joey Zuber and Matthias Zuber. ©Copyright  Version 1.0 , 2017 (Release 04.05.2017)."/>

</PreferenceScreen>