<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="8"
    tools:context="com.hevs.gym.fitnessapp.MakeAdmin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:gravity="center_vertical|left"
        android:text="@string/input_fname"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_columnSpan="1"></TextView>

    <EditText
        android:id="@+id/in_fname"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:hint="@string/hint_fname"></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:gravity="center_vertical|left"
        android:text="@string/input_lname"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/in_lname"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:hint="@string/hint_lname"></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="2"
        android:gravity="center_vertical|left"
        android:text="@string/input_username"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/in_username"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="2"
        android:hint="@string/hint_username"></EditText>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_column="1"
    android:layout_gravity="fill"
    android:layout_row="3"
    android:onClick="DeleteUser"
    android:text="Delete User"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="4"
        android:onClick="UpdateUser"
        android:text="Update User"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="5"
        android:onClick="TrasportAdmin"
        android:text="@string/button_MakeAdmin"/>

</GridLayout>
