<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="8"
    tools:context="com.hevs.gym.fitnessapp.addDel_CategoryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:gravity="center_vertical|left"
        android:text="@string/input_catname"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_columnSpan="1"></TextView>

    <EditText
        android:id="@+id/in_catname"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:hint="@string/hint_catname"></EditText>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="4"
        android:onClick="addCat"
        android:text="@string/button_addcategory"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="5"
        android:onClick="delCat"
        android:text="@string/button_delcategory" />

</GridLayout>

