<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hevs.gym.fitnessapp.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="100dp"
            android:text="@string/titelWelcome"
            android:textAlignment="center"
            android:textSize="70sp"
            android:fontFamily="arial"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/in_username"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="0.98"
                android:gravity="center_vertical"
                android:text="@string/input_username"
                android:paddingLeft="6dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="admin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/in_password"
                android:paddingLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:gravity="center_vertical"
                android:text="@string/input_password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1.10" />

            <EditText
                android:id="@+id/login_passwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:text="admin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:onClick="logIn"
                android:text="@string/button_login" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="register"
                android:text="@string/button_register" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
