<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hevs.gym.fitnessapp.CreatExcersisActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="@string/input_exname"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/in_exname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/hint_exname"
                    android:inputType="textPersonName" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|start"
                    android:padding="10dp"
                    android:text="@string/input_excat"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spin_bodyPart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:padding="10dp"
                        android:text="@string/input_exdescription"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <EditText
                    android:id="@+id/in_exdes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/creatEx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="createEx"
                    android:text="@string/button_create" />

                <Button
                    android:id="@+id/updatecreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="createEx"
                    android:text="@string/updatecreate" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

